# MicroTiClassifier

./: .gitignore  README.md  pyproject.toml
config/: path.toml  train.toml
notebook/: train.ipynb
script/: PCA.py  PR.py  ROC.py  UMAP.py  grid.py  log.py  matrix.py  report.py  stats.py  t-SNE.py
source/: export.py  grad-cam.py  predict.py  semantic.py  train.py
util/: analyze.py  augment.py  filter.py  split.py  stats.py
